app/assets/stylesheets/chf-overrides.css.scss
// front page overrides
#home_header  {
  background-image: image-url('molecules_that_matter.jpg') !important;
  background-position: 50% 50% !important;
}

// overrides for maker field
.form-group {
  .double-input {
    select {
      width: 40%;
    }
    input {
      width: 60%;
    }
  }
  .row {
    margin: 0;
    .col-md-5, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-9 {
      padding: 0;
      label {
        padding-left: 15px;
      }
    }
  }
}
.generic_work_physical_container {
  .listing {
    max-width: 40em;
  }
}

// fit the preview modal to the contained image
.preview-modal .modal-dialog {
  display: table;
  width: 1%;
}
// this bizarre hack keeps long titles from making the modal wider
.preview-modal .modal-body {
  height: auto;
  overflow: hidden;
}

